==> Han-777/Irrigation-robot/MAIN/module/key_3x3/key.c <==
#include "key.h"
#include "delay.h"
#include "lcd.h"

void PF2_IN_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
    // 使能GPIOD组时钟
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);

    GPIO_InitStruct.GPIO_Pin = GPIO_Pin_2;        
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN;       // 输入
    GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_DOWN;  // 浮空
    GPIO_Init(GPIOF, &GPIO_InitStruct);

}

void PF0_IN_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
    // 使能GPIOD组时钟
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);

    GPIO_InitStruct.GPIO_Pin = GPIO_Pin_0;        
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN;       // 输入
    GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_DOWN;  // 浮空
    GPIO_Init(GPIOF, &GPIO_InitStruct);

}

void PB15_IN_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
 
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);

    GPIO_InitStruct.GPIO_Pin = GPIO_Pin_15;        
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN;       // 输入
    GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_DOWN;  // 浮空
    GPIO_Init(GPIOB, &GPIO_InitStruct);

}

void PD14_OUT_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
 
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD, ENABLE);

		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_14;
		GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
		GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
		GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOD, &GPIO_InitStruct); 
	
}

void PD9_OUT_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
 
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD, ENABLE);

		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_9;
		GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
		GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
		GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOD, &GPIO_InitStruct); 
	
}

void PF4_OUT_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
 
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);

		GPIO_InitStruct.GPIO_Pin = GPIO_Pin_4;
		GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
		GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
		GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOF, &GPIO_InitStruct); 
	
}
