==> Han-777/Irrigation-robot/VERSION2/test/module/key_3x3/key.c <==
#include "key.h"
#include "delay.h"
#include "lcd.h"

void PF2_IN_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
    // 使能GPIOD组时钟
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOF);

    GPIO_InitStruct.Pin = LL_GPIO_PIN_2;        
    GPIO_InitStruct.Mode = LL_GPIO_MODE_INPUT;       // 输入
    GPIO_InitStruct.Pull = LL_GPIO_PULL_DOWN;  // 浮空
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(GPIOF, &GPIO_InitStruct);

}

void PF0_IN_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
    // 使能GPIOD组时钟
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOF);

    GPIO_InitStruct.Pin = LL_GPIO_PIN_0;        
    GPIO_InitStruct.Mode = LL_GPIO_MODE_INPUT;       // 输入
    GPIO_InitStruct.Pull = LL_GPIO_PULL_DOWN;  // 浮空
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(GPIOF, &GPIO_InitStruct);

}

void PB15_IN_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
 
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB);

    GPIO_InitStruct.Pin = LL_GPIO_PIN_15;        
    GPIO_InitStruct.Mode = LL_GPIO_MODE_INPUT;       // 输入
    GPIO_InitStruct.Pull = LL_GPIO_PULL_DOWN;  // 浮空
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

}

void PD14_OUT_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
 
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOD);

		GPIO_InitStruct.Pin = LL_GPIO_PIN_14;
		GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
		GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
		GPIO_InitStruct.Pull = LL_GPIO_PULL_UP;
		GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
		GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
		LL_GPIO_Init(GPIOD, &GPIO_InitStruct); 
	
}

void PD9_OUT_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
 
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOD);

		GPIO_InitStruct.Pin = LL_GPIO_PIN_9;
		GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
		GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
		GPIO_InitStruct.Pull = LL_GPIO_PULL_UP;
		GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
		GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
		LL_GPIO_Init(GPIOD, &GPIO_InitStruct); 
	
}

void PF4_OUT_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct;
 
    LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOF);

		GPIO_InitStruct.Pin = LL_GPIO_PIN_4;
		GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
		GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
		GPIO_InitStruct.Pull = LL_GPIO_PULL_UP;
		GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_HIGH;
		GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
		LL_GPIO_Init(GPIOF, &GPIO_InitStruct); 
	
}
